Added XSS and some basic CSS

--- a/views/pages/createLocation.handlebars
+++ b/views/pages/createLocation.handlebars
@@ -72,8 +72,9 @@
 
   <div id="entrances-container"></div>
   <button type="button" id="add-entrance">Add Entrance</button>
-
   <input type="submit" class="submit-button" value="Create" />
+  <br />
+  <a href="/locations" class="btn btn-info">Back to all locations</a>
 </form>
 
 <script>
