--- a/views/pages/editLocation.handlebars
+++ b/views/pages/editLocation.handlebars
@@ -37,4 +37,6 @@
     <br> --}}
 
     <input type="submit" class="submit-button" value="Update"></input>
+    <br />
+    <a href="/locations" class="btn btn-info">Back to all locations</a>
 </form>
